# brick_223_templates

./: .gitignore  LICENSE  README.md  ai_complete_yaml.py  create_yaml_brick.py  creating_csv_to_complete.py  creating_yaml_to_complete.py  generating_templates.py  main.py  mapping.csv  mapping.yaml  notes.md  pyproject.toml  quantitykinds.csv  review_brick_yaml.py  utils.py  workbook.ipynb
brick_yaml/Point/: Point.yml
brick_yaml/Point/Alarm/: Alarm.yml
brick_yaml/Point/Command/: Command.yml
brick_yaml/Point/Parameter/: Parameter.yml
brick_yaml/Point/Setpoint/: Setpoint.yml
brick_yaml/Point/Status/: Status.yml
brick_yaml/Sensor/Adjust_Sensor/: Adjust_Sensor.yml
brick_yaml/Sensor/Conductivity_Sensor/: Conductivity_Sensor.yml
brick_yaml/Sensor/Direction_Sensor/: Direction_Sensor.yml
brick_yaml/Sensor/Generation_Sensor/: Generation_Sensor.yml
brick_yaml/Sensor/Humidity_Sensor/: Humidity_Sensor.yml
brick_yaml/Temperature_Sensor/: Temperature_Sensor.yml
brick_yaml_autocomplete/Point/: Point.yml
brick_yaml_autocomplete/Temperature_Sensor/: Temperature_Sensor.yml
brick_yaml_reviewed/Point/: Point.yml
reference_templates/: nodes.yml
s223_templates/Temperature_Sensor/: Temperature_Sensor.yml
src/: generate_templates.py
src/brick_to_223_templates/: __init__.py  create_223_templates.py
template_builder/: __init__.py  ai_complete_yaml.py  create_223_templates.py  create_yaml_brick.py  get_completion.py  get_s223_data.py  namespaces.py  review_yaml.py  utils.py
template_builder/data/: notes.yml  quantitykinds.csv
(+434 files in other folders)
